--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -22,10 +22,38 @@
   text-decoration: none;
   list-style: none;
 }
+html, body {
+  min-width: 300px;
+  overflow-x: hidden; /* Evita scroll horizontal indesejado */
+}
 
 body {
   color: var(--text-color);
   background: var(--background);
   font-family: 'Gemunu Libre', sans-serif;
   letter-spacing: 0.4;
+}
+
+h1{
+  font-size: 2.5rem;
+}
+
+h2{
+  font-size: 1.75rem;
+}
+
+h3{
+  font-size: 1.5rem;
+}
+
+h4{
+  font-size: 1.25rem;
+}
+
+h5{
+  font-size: 1rem;
+}
+
+h6{
+  font-size: 0.75rem;
 }
