--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -15,6 +15,7 @@
   }
 }
 
+
 *{
   margin: 0;
   padding: 0;
@@ -34,12 +35,13 @@ body {
   letter-spacing: 0.4;
 }
 
+/*Titles */
 h1{
   font-size: 2.5rem;
 }
 
 h2{
-  font-size: 1.75rem;
+  font-size: 2rem;
 }
 
 h3{
@@ -57,3 +59,28 @@ h5{
 h6{
   font-size: 0.75rem;
 }
+
+/*Animations*/
+@keyframes slide-top {
+  0% {top: -100px;}
+  70% {top: 60px;}
+  100% {top: 30px;}
+}
+
+/*Alert component classes*/
+  .alert-success{
+    background-color: green;
+    animation: slide-top 0.3s ease-in-out ;
+  }
+  .alert-warning{
+    background-color: yellow;
+    animation: slide-top 0.3s ease-in-out ;
+  }
+  .alert-error{
+    background-color: red;    
+    animation: slide-top 0.3s ease-in-out ;
+  }
+  .alert-info{
+    background-color: rgb(0, 225, 255);
+    animation: slide-top 0.3s ease-in-out ;
+  }
