--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -44,22 +44,27 @@ h1{
 
 h2{
   font-size: 2rem;
+  letter-spacing: 1px;
 }
 
 h3{
   font-size: 1.5rem;
+  letter-spacing: 1px;
 }
 
 h4{
   font-size: 1.25rem;
+  letter-spacing: 1px;
 }
 
 h5{
   font-size: 1rem;
+  letter-spacing: 1px;
 }
 
 h6{
   font-size: 0.75rem;
+  letter-spacing: 1px;
 }
 
 /*Animations*/
