--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,8 @@
 
 html, body {
   min-width: 300px;
-  overflow-x: hidden; /* Evita scroll horizontal indesejado */
+  overflow: hidden;
+  
 }
 
 body {
@@ -36,6 +37,37 @@ body {
   font-family: 'Gemunu Libre', sans-serif;
   letter-spacing: 0.4;
 }
+
+/* Loader */
+div#Loader { 
+  background: radial-gradient(circle, #000000 0%, #000000 60%, #1F0000 100%);
+}
+
+/*Costumized ScrollBar*/
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 3.5px;
+  }
+
+  /* track */
+  ::-webkit-scrollbar-track {
+    background: #260101;
+    margin-block: 7px;
+    border-radius: 20px;
+  }
+
+  /* handle */
+  ::-webkit-scrollbar-thumb {
+    background: #8C0303;
+    border-radius: 20px;
+    border: 0.5px solid #260101;
+  }
+
+  /* handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 
 /*Titles */
 h1{
