--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,6 +37,10 @@ body {
   letter-spacing: 0.4;
 }
 
+header{
+  background: linear-gradient(to bottom, rgba(38,1,1,1) 0%,rgba(101,2,2,1) 70%,rgba(107,2,2,0.7) 80%,rgba(140,3,3,0) 100%)
+}
+
 /* Loader */
 div#Loader { 
   background: radial-gradient(circle, #000000 0%, #000000 60%, #1F0000 100%);
@@ -65,7 +69,7 @@ div#Loader {
 
   /* handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #a70202;
   }
 
 /*Titles */
@@ -76,6 +80,7 @@ h1{
 h2{
   font-size: 2.5rem;
   letter-spacing: 1px;
+  margin-bottom: 1.8rem;
 }
 
 h3{
