--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,14 +62,14 @@ div#Loader {
 
   /* handle */
   ::-webkit-scrollbar-thumb {
-    background: #8C0303;
+    background: #a00303;
     border-radius: 20px;
     border: 0.5px solid #260101;
-  }
+   }
 
   /* handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #a70202;
+    background: #7a0303;
   }
 
 /*Titles */
@@ -80,7 +80,6 @@ h1{
 h2{
   font-size: 2.5rem;
   letter-spacing: 1px;
-  margin-bottom: 1.8rem;
 }
 
 h3{
@@ -110,20 +109,42 @@ h6{
   100% {top: 50px;}
 }
 
+@keyframes fade-right {
+  0% {right: -100px;}
+  70% {right: 60px;}
+  100% {right: 50px;}
+}
+
+@keyframes fade-left {
+  0% {left: -100px;}
+  70% {left: 60px;}
+  100% {left: 50px;}
+}
+
+
+
 /*Alert component classes*/
   .alert-success{
-    background-color: green;
+    background-color: #1a9b0c;
     animation: slide-top 0.3s ease-in-out ;
+    color: white;
+    border-left: 20px solid #095700;
   }
   .alert-warning{
-    background-color: yellow;
+    background-color: #fbff00;
     animation: slide-top 0.3s ease-in-out ;
+    color: white;
+    border-left: 20px solid #8b8d00;
   }
   .alert-error{
-    background-color: red;    
+    background-color: #9b0c0c;
     animation: slide-top 0.3s ease-in-out ;
+    color: white;
+    border-left: 20px solid #570000;
   }
   .alert-info{
-    background-color: rgb(0, 225, 255);
+    background-color: #0c9b94;
     animation: slide-top 0.3s ease-in-out ;
+    color: white;
+    border-left: 20px solid #005f5a;
   }
