--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@ html, body {
 
 body {
   color: var(--text-color);
-  background: url('../../public/hero.jpg') var(--background) center no-repeat fixed;
+  background: url('/hero.jpg') var(--background) center no-repeat fixed;
   background-size: cover;
   font-family: 'Gemunu Libre', sans-serif;
   letter-spacing: 0.4;
